2010-03-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Set and check repdata.

2010-03-01  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amcheck.c: adjust split-size warnings for more
	  detail with less overall verbosity

2010-03-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Print FLUSH for failed flush.

2010-03-01  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader.c: fix typos
	* server-src/amfetchdump.pl: add support for decryption
	* server-src/amidxtaped.pl: same
	* server-src/amrestore.pl: same

2010-03-01  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm perl/Amanda/Feature.pod
	  perl/Amanda/MainLoop.pod perl/Amanda/Recovery/Clerk.pm
	  perl/Amanda/Report.pm perl/Amanda/Taper/Scan.pm
	  perl/Amanda/Util.pod: fix bad POD formatting
	* perl/make_html.pl: fix perl warnings

2010-03-01  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: add more detail about
	  include/exclude
	* man/xml-source/amgtar.8.xml: and specific documentation of the
	  patterns for amgtar

2010-03-01  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Feature.pod: document known features

2010-03-01  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Xfer.pod: no need to remove sources
	* perl/Amanda/Xfer.swg: remove reference loop, call correct callback

2010-03-01  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/Makefile.am changer-src/chg-glue.pl: remove chg-glue
	* man/xml-source/amanda-changers.7.xml: no longer "in transition"
	* server-src/Makefile.am server-src/changer.c server-src/changer.h:
	  remove changer.[ch]
	* server-src/amcheck.c: remove unused include

2010-03-01  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: remove debug message

2010-03-01 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec: remove Provides: librestore

2010-03-01  Jean-Louis Martineau <martineau@zmanda.com>