@@ -1,3 +1,9 @@
+2010-03-02  Paul C. Mantz <pcmantz@zmanda.com>
+	* perl/Amanda/Report.pm: added tape_labels field for preserving tape
+	  order
+	* perl/Amanda/Report/human.pm: use of tape_labels
+	* installcheck/Amanda_report.pl: installcheck, cleanup
+
 2010-03-01  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/reporter.c: Set and check repdata.
 
